--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "path": "^0.12.7",
     "sequelize": "^6.37.3",
-    "tedious": "^19.0.0"
+    "tedious": "^19.0.0",
+    "uuid": "^10.0.0"
   }
 }
