--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "sequelize": "^6.37.3",
     "tedious": "^19.0.0",
     "uuid": "^10.0.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
